<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/toh_all_blocks"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/you_won_toh_textview"
        android:contentDescription="@string/you_won_toh_textview_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="44sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:text="@string/play_again_toh_textview"
        android:contentDescription="@string/play_again_toh_textview_description"
        android:textSize="24sp" />

</LinearLayout>